--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,62 @@
 ﻿@page "/"
 
+@inject NavigationManager _nav
+@inject IJSRuntime JSRuntime;
+
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+<div class="MainInfo" >
+    <div>
+        <div style="float:left; width: fit-content">
+            <p class="Name">@name</p>
+            <p class="Name" >@lastName</p>
+        </div>
+        <div class="Separator"> </div>
+        <div style="float:left; width: fit-content">
+            <p class="List">Software Developer</p>
+            <p class="List">C# .Net</p>
+            <p class="List">Avalonia UI</p>
+            <p class="List">ASP .Net</p>
+        </div>
+    </div>
+    <div class="Description">
+        <p>@description</p>
+    </div>
+    <div class="ButtonList">
+        <button class="OptionButtons" type="button" title="Portfolio" onclick="document.getElementById('portfolio').scrollIntoView({behavior:'smooth'})"><img style="height: 100%" src="/css/Icons/portfolio_icon.png" border="0" /></button>
+        <button class="OptionButtons" title="LinkedIn" @onclick="()=>navigate(linkedInUrl)"><img style="height: 100%" src="/css/Icons/linkedIn_icon.png" border="0" /></button>
+        <button class="OptionButtons" title="Github" @onclick="()=>navigate(gitUrl)"><img style="height: 100%" src="/css/Icons/github_icon.png" border="0" /></button>
+    </div>
+    <div class="Email" >
+        <p>@year &emsp; @separator &emsp; @email</p>
+    </div>
+</div>
+<div id="portfolio">
+    <Portfolio/>
+</div>
+<div class="Footer">
+    <p style="text-align:center; position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%);">@footer</p>
+</div>
+
+@code{
+    private string name = "Diego";
+    private string lastName = "Couñago";
+
+    private string description = "I am a software developer from Spain, specialized in C# and .Net technologies, AvaloniaUI, ReactiveUI, SQL, Linq, XAML, ASP.Net Blazors. With some experience in both Frontend and Backend, capable of designing simple and modern UI/UX.";
+
+    private string year = "©2023";
+    private string separator = "·";
+    private string email = "diego.coufig@gmail.com";
+
+    private string footer = "Designed with Figma · Made with ASP.NET Blazor";
+
+    private string gitUrl = "https://github.com/Reider47?tab=repositories";
+    private string linkedInUrl = "https://www.linkedin.com/in/diego-cou%C3%B1ago-figueroa-a282b4287/";
+    private string portfolioUrl = "/portfolio";
+    private void navigate(string url)
+    {
+        JSRuntime.InvokeAsync<object>("open", url,"blank");
+    }
+
+}
