Some minor text fixing changes.

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -43,7 +43,7 @@
     private string name = "Diego";
     private string lastName = "Couñago";
 
-    private string description = "I am a software developer from Spain, specialized in C# and .Net technologies, AvaloniaUI, ReactiveUI, SQL, Linq, XAML, ASP.Net Blazors. With some experience in both Frontend and Backend, capable of designing simple and modern UI/UX.";
+    private string description = "I am a software developer from Spain, specialized in C# and .Net technologies, AvaloniaUI, ReactiveUI, SQL, Linq, XAML, ASP.Net Blazor. With some experience in both Frontend and Backend, capable of designing simple and modern UI/UX.";
 
     private string year = "©2023";
     private string separator = "·";
