--- a/Client/Pages/Portfolio.razor
+++ b/Client/Pages/Portfolio.razor
@@ -27,7 +27,7 @@
         {
             new PortfolioItem(
                 "TrainingJournal", 
-                "A traning journal app to register your daily workouts. Developed with technologies like AvaloniaUI, XAML, XML(to save the data), Linq, MVVM, ReactiveUI."
+                "A traning journal app to register your daily workouts. Developed with AvaloniaUI, XAML, XML(to save the data), Linq, MVVM, ReactiveUI."
                 ),
             new PortfolioItem(
                 "My Web", 
