added info about flutter app

--- a/Client/Pages/Portfolio.razor
+++ b/Client/Pages/Portfolio.razor
@@ -32,6 +32,12 @@
                 "https://github.com/DiegoCou/TrainingJournalAV11"
                 ),
             new PortfolioItem(
+                "Climbing Weather",
+                "A weather app for android for personal use to check the weather in different climbing locations in Pontevedra, Galicia. Developed in Flutter, using Figma and FlutterFlow to design the UI, it utilizes de Open Meteo API for the weather data.",
+                "dc_icon2.svg",
+                "https://github.com/DiegoCou/repositories"
+            ),
+            new PortfolioItem(
                 "My Web", 
                 "I designed this website using Figma, a website for easy prototyping of User interfaces. For the process of making the web I decided to use ASP.NET Blazor, It allowed me to practice HTML and CSS while still using C#.", 
                 "dc_icon2.svg",
