Added flutter to list of aptitudes

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -15,6 +15,7 @@
         <div class="Separator"> </div>
         <div style="float:left; width: fit-content">
             <p class="List">Software Developer</p>
+            <p class="List">Flutter</p>
             <p class="List">C# .Net</p>
             <p class="List">Avalonia UI</p>
             <p class="List">ASP .Net</p>
